Implement Kafka and Notification Service